# CMake_study

./: CMakeLists.txt  README.md  main.cpp
V2/: CMakeLists.txt
V3/: CMakeLists.txt
V4/: CMakeLists.txt  README.md
aa/bb/cc/: app
src/: sub.cpp
